--- a/COVID-Vaccination-India/main/vaccination_india.ipynb
+++ b/COVID-Vaccination-India/main/vaccination_india.ipynb
@@ -5,24 +5,28 @@
             "source": [
                 "# EDA on Indian states vaccination data using SQL\n",
                 "\n",
-                "Performed actions:\n",
+                "Queries covered in this notebook:\n",
                 "\n",
                 "1. **Editing of data in table:** Changing name of a state\n",
+                "\n",
                 "2. **Visualization:**\n",
-                "<ol type=\"a\">\n",
-                "<li> Total vaccination in every state </li>\n",
-                "<li> Data debrief </li>\n",
-                "<li> Ordering and visualizing the states with more than national average vaccination. </li>\n",
-                "<li> Ordering and visualising the states with vaccinated population less than national average. </li>\n",
-                "<li> Finding the population vacinated with dose 1 but not dose 2. </li>\n",
-                "<li> Total vaccination in every state (pie chart) </li>\n",
-                "</ol>"
+                "    a. Total vaccination in every state\n",
+                "\n",
+                "    b. Data debrief\n",
+                "    \n",
+                "    c. Ordering and visualizing the states with more than national average vaccination.\n",
+                "    \n",
+                "    d. Ordering and visualising the states with vaccinated population less than national average.\n",
+                "    \n",
+                "    e. Finding the population vacinated with dose 1 but not dose 2.\n",
+                "    \n",
+                "    f. Total vaccination in every state (pie chart)"
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 2,
             "source": [
                 "import numpy\n",
                 "import pandas as pd\n",
@@ -37,9 +41,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 3,
             "source": [
-                "data = pd.read_csv(\"COVID-19 India Statewise Vaccine Data.csv\")\n",
+                "data = pd.read_csv(\"data/COVID-19 India Statewise Vaccine Data.csv\")\n",
                 "conn = sqlite3.connect(\"vaccination_india.db\")"
             ],
             "outputs": [],
